examples/kubernetes/internal-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: internal-alb
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: internal-alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: default
spec:
  ingressClassName: internal-alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: webapp
                port:
                  number: 80
